docs-archive/apache-airflow-providers-airbyte/5.2.1/_sources/_api/airflow/providers/airbyte/hooks/airbyte/index.rst.txt
airflow.providers.airbyte.hooks.airbyte
=======================================

.. py:module:: airflow.providers.airbyte.hooks.airbyte


Attributes
----------

.. autoapisummary::

   airflow.providers.airbyte.hooks.airbyte.T


Classes
-------

.. autoapisummary::

   airflow.providers.airbyte.hooks.airbyte.AirbyteHook


Module Contents
---------------

.. py:data:: T

.. py:class:: AirbyteHook(airbyte_conn_id = 'airbyte_default', api_version = 'v1')

   Bases: :py:obj:`airflow.sdk.BaseHook`


   Hook for Airbyte API.

   :param airbyte_conn_id: Optional. The name of the Airflow connection to get
       connection information for Airbyte. Defaults to "airbyte_default".
   :param api_version: Optional. Airbyte API version. Defaults to "v1".


   .. py:attribute:: conn_name_attr
      :value: 'airbyte_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'airbyte_default'



   .. py:attribute:: conn_type
      :value: 'airbyte'



   .. py:attribute:: hook_name
      :value: 'Airbyte'



   .. py:attribute:: api_version
      :type:  str
      :value: 'v1'



   .. py:attribute:: airbyte_conn_id
      :value: 'airbyte_default'



   .. py:attribute:: conn


   .. py:attribute:: airbyte_api


   .. py:method:: get_conn_params(conn_id)


   .. py:method:: create_api_session()

      Create Airbyte API session.



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom field behaviour.



   .. py:method:: get_job_details(job_id)

      Use Http async call to retrieve metadata for a specific job of an Airbyte Sync.

      :param job_id: The ID of an Airbyte Sync Job.



   .. py:method:: get_job_status(job_id)

      Retrieve the status for a specific job of an Airbyte Sync.

      :param job_id: The ID of an Airbyte Sync Job.



   .. py:method:: wait_for_job(job_id, wait_seconds = 3, timeout = 3600)

      Poll a job to check if it finishes.

      :param job_id: Required. Id of the Airbyte job
      :param wait_seconds: Optional. Number of seconds between checks.
      :param timeout: Optional. How many seconds wait for job to be ready.
          Used only if ``asynchronous`` is False.



   .. py:method:: submit_sync_connection(connection_id)


   .. py:method:: cancel_job(job_id)

      Cancel the job when task is cancelled.

      :param job_id: Required. Id of the Airbyte job



   .. py:method:: test_connection()

      Tests the Airbyte connection by hitting the health API.



